<resources>
    <string name="app_name">GameScore</string>
    <string name="game_default">Name Game</string>
    <string name="game_tarot">Tarot</string>
    <string name="game_belote">Belote</string>
    <string name="game_wist">Wist</string>
    <string name="game_dice">Dés</string>

    <!--    PLAYERS     -->
    <string name="player">PL</string>
    <string name="score_init">0</string>
    <string name="J1">J1</string>
    <string name="J2">J2</string>
    <string name="J3">J3</string>
    <string name="J4">J4</string>
    <string name="J5">J5</string>
    <string name="hint_name">Nom Joueur</string>
    <string name="player_alone">Seul</string>

    <!--    TAROT     -->
    <string name="title_nb_players">Nombre de Joueurs</string>
    <string name="nb_players_tarot_1">4</string>
    <string name="nb_players_tarot_2">5</string>
    <string name="description_add_game">Add Game</string>
    <string name="description_help">Help</string>
    <string-array name="contrats">
        <item>Petite</item>
        <item>Pousse</item>
        <item>Garde</item>
        <item>Garde Sans</item>
        <item>Garde Contre</item>
    </string-array>
    <string-array name="bonuses">
        <item>Petit au Bout</item>
        <item>Poignée</item>
        <item>Double Poignée</item>
        <item>Triple Poignée</item>
        <item>Misère</item>
        <item>Double Misère</item>
    </string-array>
    <string name="difference_name">Ecart</string>
    <string name="bonus_name">Bonus</string>
    <string name="difference_0">0</string>
    <string name="difference_10">10</string>
    <string name="difference_20">20</string>
    <string name="difference_30">30</string>

    <string name="tarot_game_rules"><![CDATA[
    <h1>Tarot Card Game Rules</h1>

    <h2>Objective:</h2>
    <p>The objective of Tarot is to score points by taking specific cards in tricks and fulfilling contracts.</p>

    <h2>Players:</h2>
    <p>Tarot is typically played by 3 to 5 players.</p>

    <h2>Setup:</h2>
    <ol>
        <li>A standard deck of 78 Tarot cards is used.</li>
        <li>The deck consists of 4 suits: Cups, Coins, Swords, and Batons, each numbered from 1 to 10, and 21 Trump cards.</li>
        <li>Trump cards have special abilities and are ranked higher than the numbered cards.</li>
    </ol>

    <h2>Dealing:</h2>
    <ol>
        <li>The dealer shuffles the deck and offers it to the player on their right for a cut.</li>
        <li>The dealer then deals the cards in batches, usually 3 or 4 at a time, until each player has a hand of 18 cards.</li>
        <li>The dealer then deals the cards in batches, usually 3 or 4 at a time, until each player has a hand of 18 cards.</li>
        <li>The dealer then deals the cards in batches, usually 3 or 4 at a time, until each player has a hand of 18 cards.</li>
        <li>The dealer then deals the cards in batches, usually 3 or 4 at a time, until each player has a hand of 18 cards.</li>
        <li>The dealer then deals the cards in batches, usually 3 or 4 at a time, until each player has a hand of 18 cards.</li>
        <li>The dealer then deals the cards in batches, usually 3 or 4 at a time, until each player has a hand of 18 cards.</li>
        <li>The dealer then deals the cards in batches, usually 3 or 4 at a time, until each player has a hand of 18 cards.</li>
    </ol>
    <!— Add more sections as needed with h2 headings and paragraphs (p) for each rule. —>]]>
    </string>

    <string name="tarot_game_count">
        <![CDATA[
        <h2>Comptage des points</h2>
        <br>
        <h3>Valeur des cartes</h3>
        <p>Pour compter les cartes, il faut toujours joindre une carte basse avec une carte habillée.<br>
        <br>
            Le 21 ou le 1 d\'atout, ou l\'excuse (les bouts) : 5 points<br>
            le Roi : 5 points<br>
            la Dame : 4 points<br>
            le Cavalier : 3 points<br>
            le Valet : 2 points<br>
            Les autres cartes par 2 valent 1 point.
        </p>
        <br>

        <h3>Points nécessaires</h3>
        <p>
            3 bouts : 36 points<br>
            2 bouts : 41 points<br>
            1 bout : 51 points<br>
            Aucun bout : 56 points
        </p>
        <br>
        ]]>
    </string>

    <!--    BELOTE     -->
    <string name="title_type_belote">Type de jeu</string>
    <string name="type_belote_1">Normale</string>
    <string name="type_belote_2">Coinchée</string>
    <string name="nb_players_belote_1">3</string>
    <string name="nb_players_belote_2">4</string>
    <string name="team_1">Equipe 1</string>
    <string name="team_2">Equipe 2</string>
    <string name="placeholder_team">%s + %s</string>
    <string-array name="coinchee">
        <item>80</item>
        <item>90</item>
        <item>100</item>
        <item>110</item>
        <item>120</item>
        <item>130</item>
        <item>140</item>
        <item>150</item>
        <item>160</item>
        <item>250</item>
    </string-array>
    <string name="hintBeloteScore">0 – 162</string>
    <string name="topScoreBelote">162</string>


    <string name="long_click_hint">Appuyez longtemps pour modifier</string>
    <string name="click_hint_not_possible">Cet élément n\'est pas modifiable</string>
    <string name="question_quit">Voulez-vous quitter ?</string>
    <string name="question_saved">Voulez-vous reprendre la dernière partie ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="validate_button">Validate</string>
    <string name="lose_button">lose button</string>
    <string name="win_button">win button</string>
    <string name="score">Score</string>
    <string name="icon_offense">icon offense</string>
    <string name="icon_contract">icon contract</string>
    <string name="bonus">Bonus</string>
    <string name="bonus_offense">Attaque</string>
    <string name="bonus_defense">Défense</string>
    <string name="hint_fill_score">Reseignez le score</string>
    <string name="score_invalid">Score invalide</string>
    <string name="coinchee">Coinchée</string>

    <string name="belote_game_count">
        <![CDATA[
        <h2>Valeur des cartes</h2>
        <br>

        <p>La valeur des cartes dépend du type de partie jouée.</p>
        <br>

        <h3>Partie normale</h3>
        <br>
            L\'As : 11 points<br>
            le 10 : 10 points<br>
            la Roi : 4 points<br>
            la Dame : 3 points<br>
            le Valet : 2 points<br>
            Les autres cartes valent 0 point.
        <br>
        <p>A l\'atout, le valet vaut 20 points et le 9 vaut 14 points, les autres cartes gardent leur valeur initiale.</p>
        <br>

        <h3>Sans Atout</h3>
        <br>
        <p> Les cartes ont leur valeur initiale, sauf l\'As, qui vaut 19 points.</p>
        <br>

        <h3>Tout Atout</h3>
        <br>
            le Valet : 14 points<br>
            le 9 : 9 points<br>
            L\'As : 7 points<br>
            le 10 : 5 points<br>
            la Roi : 3 points<br>
            la Dame : 2 points<br>
            Les autres cartes valent 0 point.
        <br>

        <h2>Annonces</h2>
        <br>
        <p>Un joueur montre son annonce lors du premier tour, lorsque c\'est à son tour de jouer. <br>
        Le joueur ou l\'équipe avec l\'annonce la plus haute permet à son équipe de compter ses annonces dans le score
        de la partie.</p>
        <br>
            3 cartes de couleur identique qui se suivent (une tierce) : 20 points<br>
            4 cartes de couleur identique qui se suivent (un cinquante) : 50 points<br>
            5 cartes de couleur identique qui se suivent (un cent) : 100 points<br>
            4 mêmes cartes (un carré) : 100 points<br>
            Carré de 9 : 150 points<br>
            Carré de valets : 200 points<br>
        <br>

        <h2>Victoire ou non</h2>
        <br>
        <p>En sachant que le dernier pli vaut 10 points, il y a 162 points au total.<br>
        Les annonces sont comptées dans le score pour savoir si une partie est gagnée ou non.
        Le joueur ou l\'équipe qui prend doit faire autant ou plus de points que son adversaire
        pour gagner la partie. <br>
        Si elle fait moins, on dit que la partie est chutée et l\'équipe marque 0. L\'adversaire marque 162.<br>
        Si une équipe fait tous plis, on dit qu\'elle fait capot et marque 250 points à 0.<br>
        Dans tous les cas (gagnée, chutée ou capot), les annonces sont tout de même comptées</p>
        <br>
        ]]>
    </string>

    <string name="belote_coinchee_game_count">
        <![CDATA[
        <h2>Valeur des cartes</h2>
        <br>

        <p>La valeur des cartes dépend du type de partie jouée.</p>
        <br>

        <h3>Partie normale</h3>
        <br>
            L\'As : 11 points<br>
            le 10 : 10 points<br>
            la Roi : 4 points<br>
            la Dame : 3 points<br>
            le Valet : 2 points<br>
            Les autres cartes valent 0 point.
        <br>
        <p>A l\'atout, le valet vaut 20 points et le 9 vaut 14 points, les autres cartes gardent leur valeur initiale.</p>
        <br>

        <h3>Sans Atout</h3>
        <br>
        <p> Les cartes ont leur valeur initiale, sauf l\'As, qui vaut 19 points.</p>
        <br>

        <h3>Tout Atout</h3>
        <br>
            le Valet : 14 points<br>
            le 9 : 9 points<br>
            L\'As : 7 points<br>
            le 10 : 5 points<br>
            la Roi : 3 points<br>
            la Dame : 2 points<br>
            Les autres cartes valent 0 point.
        <br>

        <h2>Annonces</h2>
        <br>
        <p>Un joueur montre son annonce lors du premier tour, lorsque c\'est à son tour de jouer. <br>
        Le joueur ou l\'équipe avec l\'annonce la plus haute permet à son équipe de compter ses annonces.</p>
        <br>
            3 cartes de couleur identique qui se suivent (une tierce) : 20 points<br>
            4 cartes de couleur identique qui se suivent (un cinquante) : 50 points<br>
            5 cartes de couleur identique qui se suivent (un cent) : 100 points<br>
            4 mêmes cartes (un carré) : 100 points<br>
            Carré de 9 : 150 points<br>
            Carré de valets : 200 points<br>
        <br>

        <h2>Victoire ou non</h2>
        <br>
        <p>En sachant que le dernier pli vaut 10 points, il y a 162 points au total.<br>
        Les annonces <b>ne sont pas</b> comptées dans le score pour savoir si une partie est gagnée ou non.
        Le joueur ou l\'équipe qui prend doit faire autant ou plus de points que son adversaire
        pour gagner la partie. <br>
        Si elle fait moins, on dit que la partie est chutée et l\'équipe marque 0. L\'adversaire marque 162.<br>
        Si une équipe fait tous plis, on dit qu\'elle fait capot et marque 250 points à 0.<br>
        Dans tous les cas (gagnée, chutée ou capot), les annonces sont tout de même comptées</p>
        <br>
        ]]>
    </string>


    <!--  AIDE  -->
    <string name="help_actions">
        <![CDATA[
        <h2>Modifier une partie</h2>
        <p>Pour modifier une partie, appuyez longtemps sur la partie en question. Une page s\'ouvrira pour faire la modification.</p>
        <br>
        ]]>
    </string>
</resources>
