<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NbPlayersFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/title_nb_players"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:textSize="30sp"
            android:textColor="#FFF"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fourPlayers"
            android:text="@string/nb_players_tarot_1"
            android:textSize="60sp"
            android:padding="30sp"
            android:layout_marginBottom="40sp"
            android:background="@drawable/background_games"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fivePlayers"
            android:text="@string/nb_players_tarot_2"
            android:textSize="60sp"
            android:padding="30sp"
            android:background="@drawable/background_games"/>

    </LinearLayout>



</FrameLayout>