<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    tools:context=".belote.TypeBeloteFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:text="@string/title_type_belote"
            android:textColor="#FFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/normale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40sp"
            android:background="@drawable/background_games"
            android:padding="40sp"
            android:text="@string/type_belote_1"
            android:textSize="40sp" />


        <Button
            android:id="@+id/coinchee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_games"
            android:padding="40sp"
            android:text="@string/type_belote_2"
            android:textSize="40sp" />

    </LinearLayout>


</FrameLayout>