<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".NameFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:isScrollContainer="true"
        android:paddingStart="35sp"
        android:paddingEnd="35sp"
        android:paddingBottom="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/J1"
                android:textColor="#FFF"
                android:padding="20dp"
                android:textSize="30sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:textColor="#FFF"
                android:textSize="30sp"
                android:maxLines="1"
                android:inputType="textCapWords"
                android:id="@+id/nameP1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/J2"
                android:textColor="#FFF"
                android:padding="20dp"
                android:textSize="30sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:textColor="#FFF"
                android:textSize="30sp"
                android:maxLines="1"
                android:inputType="textCapWords"
                android:id="@+id/nameP2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/J3"
                android:textColor="#FFF"
                android:padding="20dp"
                android:textSize="30sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:textColor="#FFF"
                android:textSize="30sp"
                android:maxLines="1"
                android:inputType="textCapWords"
                android:id="@+id/nameP3"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/J4"
                android:textColor="#FFF"
                android:padding="20dp"
                android:textSize="30sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:textColor="#FFF"
                android:textSize="30sp"
                android:maxLines="1"
                android:inputType="textCapWords"
                android:id="@+id/nameP4"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:id="@+id/llP5"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/J5"
                android:textColor="#FFF"
                android:padding="20dp"
                android:textSize="30sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:textColor="#FFF"
                android:textSize="30sp"
                android:maxLines="1"
                android:inputType="textCapWords"
                android:id="@+id/nameP5"/>
        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/checked"
            android:padding="10sp"
            android:background="@drawable/background_games"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:id="@+id/ok_btn"/>

    </LinearLayout>

</FrameLayout>